--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <section class="auth-form-section">
       <h1 class="auth-title">Login</h1>
 
-      <form action="dashboard.html" method="POST" class="auth-form">
+      <form action="login.php" method="POST" class="auth-form">
 
         <label for="email">EMAIL</label>
         <input type="email" id="email" name="email" placeholder="email@example.com" required />
@@ -26,7 +26,7 @@
 
         <div class="auth-options">
           <label><input type="checkbox" name="remember" /> Remember me</label>
-          <a href="#" class="link-small">Forgot password</a>
+          <a href="forgot_password.php" class="link-small">Forgot password</a>
         </div>
       </form>
     </section>
@@ -40,6 +40,6 @@
     </section>
 
   </main>
-
+<script src="login.js"></script>
 </body>
 </html>
