--- a/assessment.html
+++ b/assessment.html
@@ -5,135 +5,260 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DASS-21 Assessment | Mindly</title>
   <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
     body {
-      background-color: #f4f8fc;
-      margin: 0;
-      padding: 20px;
-    }
-
-    .container {
+      font-family: Arial, sans-serif;
+      padding: 30px;
       max-width: 900px;
       margin: auto;
       background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-
     h1 {
       text-align: center;
-      font-size: 26px;
-      margin-bottom: 10px;
-      color: #1e3a8a;
     }
-
-    .consent {
-      background-color: #fff6e6;
-      border-left: 5px solid #f59e0b;
-      padding: 15px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      font-size: 14px;
-    }
-
     .question {
       margin-bottom: 20px;
-      border-bottom: 1px dashed #ccc;
-      padding-bottom: 10px;
+      padding: 15px;
+      background: #F3FFF8;
+      border-radius: 6px;
     }
-
-    .question label {
-      font-weight: bold;
+    label {
       display: block;
-      margin-bottom: 5px;
+      font-weight: bold;
+      margin-bottom: 8px;
     }
-
-    .scale-options {
-      display: flex;
-      gap: 10px;
-    }
-
-    .scale-options label {
+    .options label {
       font-weight: normal;
+      margin-right: 15px;
     }
-
     .submit-btn {
-      display: block;
-      margin: 30px auto 0;
-      padding: 12px 25px;
-      background-color: #a4cafe;
+      text-align: center;
+      margin-top: 40px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 18px;
+      background: #0F766E;
+      color: white;
       border: none;
-      border-radius: 25px;
-      color: #1e3a8a;
-      font-weight: bold;
+      border-radius: 5px;
       cursor: pointer;
     }
-
-    .submit-btn:hover {
-      background-color: #82b0f4;
-    }
-
-    .note {
-      font-size: 12px;
-      color: #888;
-      text-align: center;
-      margin-top: 20px;
+    button:hover {
+      background: #14B8A6;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>DASS-21 Self-Assessment</h1>
 
-    <div class="consent">
-      ⚠️ Please confirm you have read and agree to the PDPA terms. Your answers will be kept confidential and used only for personal tracking.
-    </div>
+<h1>DASS-21 Assessment</h1>
+<p>Please answer each of the following based on how much it applied to you **over the past week**.</p>
 
-    <!-- Sample Questions (Repeat or generate all 21 in PHP later) -->
-    <form>
-      <div class="question">
-        <label for="q1">1. I found it hard to wind down.</label>
-        <div class="scale-options">
-          <label><input type="radio" name="q1" value="0" required> 0</label>
-          <label><input type="radio" name="q1" value="1"> 1</label>
-          <label><input type="radio" name="q1" value="2"> 2</label>
-          <label><input type="radio" name="q1" value="3"> 3</label>
-        </div>
-      </div>
+<form method="post" action="submit_assessment.php">
 
-      <div class="question">
-        <label for="q2">2. I was aware of dryness of my mouth.</label>
-        <div class="scale-options">
-          <label><input type="radio" name="q2" value="0" required> 0</label>
-          <label><input type="radio" name="q2" value="1"> 1</label>
-          <label><input type="radio" name="q2" value="2"> 2</label>
-          <label><input type="radio" name="q2" value="3"> 3</label>
-        </div>
-      </div>
+  <!-- Official 21 Questions -->
+  <!-- Each with name="responses[]" to pass as array -->
 
-      <div class="question">
-        <label for="q3">3. I couldn’t seem to experience any positive feeling at all.</label>
-        <div class="scale-options">
-          <label><input type="radio" name="q3" value="0" required> 0</label>
-          <label><input type="radio" name="q3" value="1"> 1</label>
-          <label><input type="radio" name="q3" value="2"> 2</label>
-          <label><input type="radio" name="q3" value="3"> 3</label>
-        </div>
-      </div>
-
-      <!-- Repeat until q21 -->
-
-      <button class="submit-btn" type="submit">Submit Assessment</button>
-    </form>
-
-    <div class="note">
-      Your answers will be saved securely. You may retake the quiz anytime.
+  <div class="question"><label>1. I found it hard to wind down</label>
+    <div class="options">
+      <label><input type="radio" name="responses[0]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[0]" value="1"> 1</label>
+      <label><input type="radio" name="responses[0]" value="2"> 2</label>
+      <label><input type="radio" name="responses[0]" value="3"> 3</label>
     </div>
   </div>
+
+  <div class="question"><label>2. I was aware of dryness of my mouth</label>
+    <div class="options">
+      <label><input type="radio" name="responses[1]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[1]" value="1"> 1</label>
+      <label><input type="radio" name="responses[1]" value="2"> 2</label>
+      <label><input type="radio" name="responses[1]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <div class="question"><label>3. I couldn't seem to experience any positive feeling at all</label>
+    <div class="options">
+      <label><input type="radio" name="responses[2]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[2]" value="1"> 1</label>
+      <label><input type="radio" name="responses[2]" value="2"> 2</label>
+      <label><input type="radio" name="responses[2]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <div class="question"><label>4. I experienced breathing difficulty (e.g., excessively rapid breathing, breathlessness in the absence of physical exertion)</label>
+    <div class="options">
+      <label><input type="radio" name="responses[3]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[3]" value="1"> 1</label>
+      <label><input type="radio" name="responses[3]" value="2"> 2</label>
+      <label><input type="radio" name="responses[3]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <div class="question"><label>5. I found it difficult to work up the initiative to do things</label>
+    <div class="options">
+      <label><input type="radio" name="responses[4]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[4]" value="1"> 1</label>
+      <label><input type="radio" name="responses[4]" value="2"> 2</label>
+      <label><input type="radio" name="responses[4]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <div class="question"><label>6. I tended to overreact to situations</label>
+    <div class="options">
+      <label><input type="radio" name="responses[5]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[5]" value="1"> 1</label>
+      <label><input type="radio" name="responses[5]" value="2"> 2</label>
+      <label><input type="radio" name="responses[5]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <div class="question"><label>7. I experienced trembling (e.g., in the hands)</label>
+    <div class="options">
+      <label><input type="radio" name="responses[6]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[6]" value="1"> 1</label>
+      <label><input type="radio" name="responses[6]" value="2"> 2</label>
+      <label><input type="radio" name="responses[6]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <div class="question"><label>8. I felt that I was using a lot of nervous energy</label>
+    <div class="options">
+      <label><input type="radio" name="responses[7]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[7]" value="1"> 1</label>
+      <label><input type="radio" name="responses[7]" value="2"> 2</label>
+      <label><input type="radio" name="responses[7]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <div class="question"><label>9. I was worried about situations in which I might panic and make a fool of myself</label>
+    <div class="options">
+      <label><input type="radio" name="responses[8]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[8]" value="1"> 1</label>
+      <label><input type="radio" name="responses[8]" value="2"> 2</label>
+      <label><input type="radio" name="responses[8]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <!-- Continue questions 10–21 using same structure -->
+  <!-- I've truncated to save space, but I can provide all if you'd like -->
+  <div class="question"><label>10. I felt that I had nothing to look forward to</label>
+    <div class="options">
+      <label><input type="radio" name="responses[9]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[9]" value="1"> 1</label>
+      <label><input type="radio" name="responses[9]" value="2"> 2</label>
+      <label><input type="radio" name="responses[9]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>11. I found myself getting agitated</label>
+    <div class="options">
+      <label><input type="radio" name="responses[10]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[10]" value="1"> 1</label>
+      <label><input type="radio" name="responses[10]" value="2"> 2</label>
+      <label><input type="radio" name="responses[10]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>12. I found it difficult to relax</label>
+    <div class="options">
+      <label><input type="radio" name="responses[11]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[11]" value="1"> 1</label>
+      <label><input type="radio" name="responses[11]" value="2"> 2</label>
+      <label><input type="radio" name="responses[11]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>13. I felt downhearted and blue</label>
+    <div class="options">
+      <label><input type="radio" name="responses[12]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[12]" value="1"> 1</label>
+      <label><input type="radio" name="responses[12]" value="2"> 2</label>
+      <label><input type="radio" name="responses[12]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>14. I was intolerant of anything that kept me from getting on with what I was doing</label>
+    <div class="options">
+      <label><input type="radio" name="responses[13]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[13]" value="1"> 1</label>
+      <label><input type="radio" name="responses[13]" value="2"> 2</label>
+      <label><input type="radio" name="responses[13]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>15. I felt I was close to panic</label>
+    <div class="options">
+      <label><input type="radio" name="responses[14]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[14]" value="1"> 1</label>
+      <label><input type="radio" name="responses[14]" value="2"> 2</label>
+      <label><input type="radio" name="responses[14]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>16. I was unable to become enthusiastic about anything</label>
+    <div class="options">
+      <label><input type="radio" name="responses[15]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[15]" value="1"> 1</label>
+      <label><input type="radio" name="responses[15]" value="2"> 2</label>
+      <label><input type="radio" name="responses[15]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>17. I felt I wasn't worth much as a person</label>
+    <div class="options">
+      <label><input type="radio" name="responses[16]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[16]" value="1"> 1</label>
+      <label><input type="radio" name="responses[16]" value="2"> 2</label>
+      <label><input type="radio" name="responses[16]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>18. I felt that I was rather touchy</label>
+    <div class="options">
+      <label><input type="radio" name="responses[17]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[17]" value="1"> 1</label>
+      <label><input type="radio" name="responses[17]" value="2"> 2</label>
+      <label><input type="radio" name="responses[17]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>19. I was aware of the action of my heart in the absence of physical exertion (e.g., sense of heart rate increase, heart missing a beat)</label>
+    <div class="options">
+      <label><input type="radio" name="responses[18]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[18]" value="1"> 1</label>
+      <label><input type="radio" name="responses[18]" value="2"> 2</label>
+      <label><input type="radio" name="responses[18]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <div class="question"><label>20. I felt scared without any good reason</label>
+    <div class="options">
+      <label><input type="radio" name="responses[19]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[19]" value="1"> 1</label>
+      <label><input type="radio" name="responses[19]" value="2"> 2</label>
+      <label><input type="radio" name="responses[19]" value="3"> 3</label>
+    </div>
+  </div>
+  
+  <!-- Question 21 -->
+  <div class="question"><label>21. I felt that life was meaningless</label>
+    <div class="options">
+      <label><input type="radio" name="responses[20]" value="0" required> 0</label>
+      <label><input type="radio" name="responses[20]" value="1"> 1</label>
+      <label><input type="radio" name="responses[20]" value="2"> 2</label>
+      <label><input type="radio" name="responses[20]" value="3"> 3</label>
+    </div>
+  </div>
+
+  <div class="submit-btn">
+    <button type="submit">Submit Assessment</button>
+  </div>
+
+  <div class="note">
+      Your answers will be saved securely. You may retake the quiz anytime.
+  </div>
+
+</form>
 </body>
 </html>
+
