--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,8 @@
       <a href="dashboard.html">Dashboard</a>
       <a href="chatbot.html">Chatbot</a>
       <a href="profile.html">Profile</a>
+      <a href="logout.php">Log Out</a>
+
     </nav>
   </header>
 
@@ -86,6 +88,6 @@
     <p>© Mindly · All rights reserved</p>
     <a href="#">Privacy Policy</a>
   </footer>
-
+<script src="logout.js"></script>
 </body>
 </html>
