fixed the link to the css pages and the logo images

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard | Mindly</title>
-  <link rel="stylesheet" href="../assets/css/styles.css" />
+  <link rel="stylesheet" href="../assets/css/dashboard.css" />
 </head>
 <body>
 
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo-area">
-      <img src="logo.svg" alt="Mindly Logo" class="logo" />
+      <img src="../assets/img/clr-primary-dark-logo.webp" alt="Mindly Logo" class="logo" />
       <span class="site-name">Mindly</span>
     </div>
     <nav class="nav-links">
