--- a/pages/landing_page.html
+++ b/pages/landing_page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mindly | Mental Health Support</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../assets/css/styles.css" />
 </head>
 <body>
 
@@ -13,7 +13,7 @@
 
     <!-- Branding Section -->
     <section class="branding">
-      <img src="logo.svg" alt="Mindly Logo" class="logo" />
+      <img src="../assets/img/clr-primary-dark-logo.webp" alt="Mindly Logo" class="logo" />
 
       <h1 class="site-title">Mindly</h1>
       <p class="tagline">Breaking Stigma<br />Building Community</p>
