--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login | Mindly</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../assets/css/styles.css" />
 </head>
 <body>
 
@@ -33,7 +33,7 @@
 
     <!-- Right Section: Visual + Redirect -->
     <section class="auth-info-section">
-      <img src="logo.svg" alt="Mindly Logo" class="logo" />
+      <img src="../assets/img/clr-background-logo.webp" alt="Mindly Logo" class="logo" />
       <h2 class="auth-greeting">Welcome to login</h2>
       <p>Don't have an account?</p>
       <a href="sign_up.html" class="btn btn-secondary">Sign Up</a>
