--- a/pages/sign_up.html
+++ b/pages/sign_up.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign Up | Mindly</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../assets/css/styles.css" />
 </head>
 <body>
 
@@ -41,7 +41,7 @@
 
     <!-- Right Section: Logo -->
     <section class="auth-info-section">
-      <img src="logo.svg" alt="Mindly Logo" class="logo" />
+      <img src="../assets/img/clr-background-logo.webp" alt="Mindly Logo" class="logo" />
     </section>
 
   </main>
