dasboad.html changed to dashboard.php

--- a/pages/assessment.html
+++ b/pages/assessment.html
@@ -4,49 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DASS-21 Assessment | Mindly</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 30px;
-      max-width: 900px;
-      margin: auto;
-      background: #fff;
-    }
-    h1 {
-      text-align: center;
-    }
-    .question {
-      margin-bottom: 20px;
-      padding: 15px;
-      background: #F3FFF8;
-      border-radius: 6px;
-    }
-    label {
-      display: block;
-      font-weight: bold;
-      margin-bottom: 8px;
-    }
-    .options label {
-      font-weight: normal;
-      margin-right: 15px;
-    }
-    .submit-btn {
-      text-align: center;
-      margin-top: 40px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 18px;
-      background: #0F766E;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #14B8A6;
-    }
-  </style>
+  <link rel="stylesheet" href="../assets/css/header.css" />
+  <link rel="stylesheet" href="../assets/css/assessment.css" />
+
 </head>
 <body>
 
@@ -240,7 +200,6 @@
     </div>
   </div>
   
-  <!-- Question 21 -->
   <div class="question"><label>21. I felt that life was meaningless</label>
     <div class="options">
       <label><input type="radio" name="responses[20]" value="0" required> 0</label>
