--- a/pages/profile.html
+++ b/pages/profile.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Profile | Mindly</title>
+  <link rel="stylesheet" href="../assets/css/header.css" />
+
   <style>
     * {
       box-sizing: border-box;
