--- a/pages/goodbye_page.html
+++ b/pages/goodbye_page.html
@@ -28,7 +28,7 @@
             
             <div class="button-group">
                 <a href="login.php" class="btn btn-primary">Login</a>
-                <a href="signup.php" class="btn btn-secondary">Sign Up</a>
+                <a href="sign_up.php" class="btn btn-secondary">Sign Up</a>
             </div>
         </div>
     </main>
